--- a/views/student/layouts/project-list.ejs
+++ b/views/student/layouts/project-list.ejs
@@ -12,19 +12,19 @@
                             
                     <% } else{ %>  
                         
-                        <% if(RecommendaResult[0].TicTacToePercent === 100) { %> <%# Follow node %> 
+                        <% if(RecommendaResult[0].TicketBooking_SystemPercent === 100) { %> <%# Follow node %> 
                         <!-- Project A -->   
                         <li class="mb-1">
-                            <li><a href="/project-Tic_Tac_Toe" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
-                                Tic Tac Toe
+                            <li><a href="/project-Ticket_Booking_System" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
+                                Ticket Booking System
                             </a></li>
                         </li>
                         <% } %>
-                        <% if(RecommendaResult[0].LibraryPercent === 100) { %> <%# Follow node %> 
+                        <% if(RecommendaResult[0].PointofSales_SystemPercent === 100) { %> <%# Follow node %> 
                         <!-- Project B -->   
                         <li class="mb-1">
-                            <li><a href="/project-Library_System" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
-                                Library System 
+                            <li><a href="/project-Point_of_Sales_System" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
+                                Point of Sales System
                             </a></li>
                         </li>
                         <% } %>
@@ -35,22 +35,8 @@
                                 Roshambo 
                             </a></li>
                         </li>
-                        <% } %>
-                        <% if(RecommendaResult[0].CalendarPercent === 100) { %> <%# Follow node %> 
-                        <!-- Project D -->   
-                        <li class="mb-1">
-                            <li><a href="/project-Calendar" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
-                                Calendar
-                            </a></li>
-                        </li>
-                        <% } %>
-                        <% if(RecommendaResult[0].CalculatorPercent === 100) { %> <%# Follow node %> 
-                        <!-- Project E -->   
-                        <li class="mb-1">
-                            <li><a href="/project-Calculator" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
-                                Calculator 
-                            </a></li>
-                        </li>
+                     
+                        
                         <% } else{ %>  
                     
                             
