--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -35,20 +35,20 @@
                         
                             <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                   
-                    <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statement"){ %>
+                    <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statements"){ %>
                         
                             <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                     <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statement"){ %>
                         
                             <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                   
-                    <% }else if(RecommendaResult[0].RecommendCourse === "Array and String"){ %>
+                    <% }else if(RecommendaResult[0].RecommendCourse === "Arrays and Strings"){ %>
                         
-                            <button onclick="window.location.href='/course-Array_and_String'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                            <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                   
-                    <% }else if(RecommendaResult[0].RecommendCourse === "Function"){ %>
+                    <% }else if(RecommendaResult[0].RecommendCourse === "Functions"){ %>
                         
-                            <button onclick="window.location.href='/course-Function'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                            <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                     
                     <% } else{ %>  <%# ถ้าไม่มีการแนะนำ คือ เรียนตาม path ที่เลือกเรียบร้อยแล้ว%> 
                         <button type="button" class="btn btn-outline-dark btn-sm btn-block " data-bs-toggle="modal" data-bs-target="#RecommendSetting"><svg height="20" width="20" viewBox="0 0 512 512">
