--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -14,7 +14,7 @@
                    <div class="box bg-light h2 mb-5 shadow" >
                     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
                         <div lang="ja">
-                          <% var count = 5 %>
+                          <% var count = 3 %>
                           <% if(Object.keys(RecommendaResult).length === 0){ %>
                             <h2> <%= count %> โปรเจกต์ ยังไม่ปลดล็อก !</h2>
                                 <h1>เรียนรู้เพิ่มเติมเพื่อปลดล็อก</h1>
@@ -24,30 +24,21 @@
                             
                           <% } else{ %>  
 
-                            <% if(RecommendaResult[0].TicTacToePercent === 100) { count = count-1%> <%# Follow node %> 
+                            <% if(RecommendaResult[0].TicketBooking_SystemPercent === 100) { count = count-1%> <%# Follow node %> 
                               <p class="wrapbox auto">
-                                <br><a href="/project-Tic_Tac_Toe" style="color:black">Tic Tac Toe</a>
+                                <br><a href="/project-Ticket_Booking_System" style="color:black">Ticket Booking System</a>
                               </p>
                             <% } %>
-                            <% if(RecommendaResult[0].LibraryPercent === 100) {count = count-1 %> <%# Follow node %> 
+                            <% if(RecommendaResult[0].PointofSales_SystemPercent === 100) {count = count-1 %> <%# Follow node %> 
                               <p class="wrapbox auto">
-                                <br><a href="/project-Library_System" style="color:black">Library System</a>
+                                <br><a href="/project-Point_of_Sales_System" style="color:black">Point of Sales System</a>
                               </p>
                             <% } %>
                             <% if(RecommendaResult[0].RoshamboPercent === 100) {count = count-1 %> <%# Follow node %> 
                               <p class="wrapbox auto">
                                 <br><a href="/project-Roshambo" style="color:black">Roshambo</a>
                               </p>
-                            <% } %>
-                            <% if(RecommendaResult[0].CalendarPercent === 100) {count = count-1 %> <%# Follow node %> 
-                              <p class="wrapbox auto">
-                                <br><a href="/project-Calendar" style="color:black">Calendar</a>
-                              </p>
-                            <% } %>
-                            <% if(RecommendaResult[0].CalculatorPercent === 100) {count = count-1 %> <%# Follow node %> 
-                              <p class="wrapbox auto">
-                                <br><a href="/project-Calculator" style="color:black">Calculator</a>
-                              </p>
+                            
                               <% } else{ %>  
                                 <h2> <%= count %> Project ยังไม่ปลดล็อก !</h2>
                                 <h1>เรียนรู้เพิ่มเติมเพื่อปลดล็อก</h1>
@@ -62,7 +53,7 @@
                           </div>
                     </div>
                 </div>
-                <% if(count >=5 || count === 0) { %> <%# Follow node %> 
+                <% if(count >=3 || count === 0) { %> <%# Follow node %> 
                
                   <% } else{ %>  
                     <h3>มีอีก <%= count %> Project ที่ไม่ปลดล็อก!</h3>
