--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -285,17 +285,17 @@
                             <div class="w-100"></div>
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Tic-Path" value="TicTacToe">
-                                    <label class="form-check-label" for="Tic-Path">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Ticket-Path" value="TicketBookingSystem-(Project_quiz1)">
+                                    <label class="form-check-label" for="Ticket-Path">
                                     Ticket Booking System
                                     </label>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Lib-Path" value="Library">
-                                    <label class="form-check-label" for="Lib-Path">
-                                    Library System
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Point-Path" value="Library">
+                                    <label class="form-check-label" for="Point-Path">
+                                    Point of Sales System
                                     </label>
                                 </div>
                             </div>
@@ -305,22 +305,6 @@
                                     <input class="form-check-input" type="radio" name="RecommendationSetting" id="Ros-Path" value="Roshambo">
                                     <label class="form-check-label" for="Ros-Path">
                                     Roshambo
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Cal-Path" value="Calendar">
-                                    <label class="form-check-label" for="Cal-Path">
-                                    Calendar
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Calc-Path" value="Calculator">
-                                    <label class="form-check-label" for="Calc-Path">
-                                    Calculator
                                     </label>
                                 </div>
                             </div>
