--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -3,13 +3,16 @@
 
 <style>
     a {
-        color: rgb(65, 65, 65);
+        color: #2a2a2a;
         text-decoration: none;
     }
-    a:hover {
-        color: blueviolet;
+    p a:hover { 
+        color: #ac28ff;
         font-size: large;
+        text-shadow:#fff700 1px 0 2px;
     }
+    
+    
     .scrollbtnK {
         width: 40px;
         text-align: center;
@@ -57,8 +60,8 @@
             <div class="accordion" id="accordionParentSyntax">
                 <!--   Introduce -->
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
+                    <br>
                     <h1>Lesson</h1>
-                    
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
                         <li class="breadcrumb-item active" aria-current="page">Course</li>
