--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -14,6 +14,7 @@
         background-color: #e06666;
         width: 20px;
         height: 20px;
+        border: 1px solid #ffffff;
     }
     
 </style>
@@ -48,7 +49,7 @@ else {
     for (let i = 0; i < Object.keys(StudentAnswer).length; i++) {  
         var Condition = 0;
         var checkedLV1 = "" ,checkedLV2 = "",checkedLV3 = "",checkedLV4,TeacherCheck;
-        var cLV1 = "background-color: white;", cLV2 = "background-color: white;", cLV3 = "background-color: white;", cLV4 = "background-color: white;";
+        var cLV1 = "background-color: #F8F9FA;", cLV2 = "background-color: #F8F9FA;", cLV3 = "background-color: #F8F9FA;", cLV4 = "background-color: #F8F9FA;";
         var training1 = "" ,training2 = "", training3 = "", training4 = "";
         var k = "", t = "", e = "", w = "";
 
