--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -15,7 +15,15 @@
             -moz-user-select: none;
             user-select: none;
         }
-
+        td {
+            text-align: center;
+        }
+        .head {
+            font-size: 30px;
+        }
+        .c {
+            text-align: center;
+        }
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
                 font-size: 3.5rem;
@@ -149,7 +157,9 @@
 <!-- MID -->
     <!-- SKILLS-->
 
-    <div id="content" class="item3">
+    <div id="content" class="container">
+       <div class="group">
+        <div>
         <% if(isNaN(BasicPercent)){ %>
 
         <% } else{ %>  
@@ -157,12 +167,11 @@
                     <path d="M352.4 243.8l-49.83 99.5c-6.009 12-23.41 11.62-28.92-.625L216.7 216.3l-30.05 71.75L88.55 288l176.4 182.2c12.66 13.07 33.36 13.07 46.03 0l176.4-182.2l-112.1 .0052L352.4 243.8zM495.2 62.86c-54.36-46.98-137.5-38.5-187.5 13.06L288 96.25L268.3 75.92C218.3 24.36 135.2 15.88 80.81 62.86C23.37 112.5 16.84 197.6 60.18 256h105l35.93-86.25c5.508-12.88 23.66-13.12 29.54-.375l58.21 129.4l49.07-98c5.884-11.75 22.78-11.75 28.67 0l27.67 55.25h121.5C559.2 197.6 552.6 112.5 495.2 62.86z"/>
                 </svg> -->Competency </h1>   
                 <div style="height: 1000px;" class="chartMenu">
-                
-                <div class="chartCard">
-                  <div class="chartBox">
-                    <canvas id="myChart"></canvas>
-                  </div>
-                </div>
+                    <div class="chartCard">
+                        <div class="chartBox">
+                        <canvas id="myChart"></canvas>
+                        </div>
+                    </div>
                 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
                 <script>
                 // setup 
@@ -201,16 +210,84 @@
                 const chartVersion = document.getElementById('chartVersion');
                 chartVersion.innerText = Chart.version;
                 </script>
-             
-              
-             
-        <% } %>
-    <br>
-        
 
-       
-        <br>
-        <!-- Start of LiveChat (www.livechat.com) code -->
+             </div></div>
+        <% } %>
+            
+  <div>
+        <table>
+            <tr>
+                <th style="width: 300px;" class="head">Lesson</th>
+                <th style="width: 120px;" class="head c">K</th>
+                <th style="width: 120px;" class="head c">T</th>
+                <th style="width: 120px;" class="head c">E</th>
+                <th style="width: 120px;" class="head c">W</th>
+            </tr>
+            <tr>
+                <th>1 Algorithms and Flowcharts</th>
+                <td><%= IntroductionScoreLV1 %></td>
+                <td><%= IntroductionScoreLV2 %></td>
+                <td><%= IntroductionScoreLV3 %></td>
+                <td><%= IntroductionScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>2 Datatype and Variable</th>
+                <td><%= StringScoreLV1 %></td>
+                <td><%= StringScoreLV2 %></td>
+                <td><%= StringScoreLV3 %></td>
+                <td><%= StringScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>3 Input and Output</th>
+                <td><%= DatatypeScoreLV1 %></td>
+                <td><%= DatatypeScoreLV2 %></td>
+                <td><%= DatatypeScoreLV3 %></td>
+                <td><%= DatatypeScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>4 Operators and Expressions</th>
+                <td><%= OperatorsScoreLV1 %></td>
+                <td><%= OperatorsScoreLV2 %></td>
+                <td><%= OperatorsScoreLV3 %></td>
+                <td><%= OperatorsScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>5 Selection Statements</th>
+                <td><%= FlowControlScoreLV1 %></td>
+                <td><%= FlowControlScoreLV2 %></td>
+                <td><%= FlowControlScoreLV3 %></td>
+                <td><%= FlowControlScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>6 Loop Statements</th>
+                <td><%= PointersScoreLV1 %></td>
+                <td><%= PointersScoreLV2 %></td>
+                <td><%= PointersScoreLV3 %></td>
+                <td><%= PointersScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>7 Arrays and Strings</th>
+                <td><%= FunctionScoreLV1 %></td>
+                <td><%= FunctionScoreLV2 %></td>
+                <td><%= FunctionScoreLV3 %></td>
+                <td><%= FunctionScoreLV4 %></td>
+            </tr>
+            <tr>
+                <th>8 Functions</th>
+                <td><%= StructureScoreLV1 %></td>
+                <td><%= StructureScoreLV2 %></td>
+                <td><%= StructureScoreLV3 %></td>
+                <td><%= StructureScoreLV4 %></td>
+            </tr>
+                
+            
+        </table>
+     </div>   
+ 
+    </div>
+    </div>
+    
+<!-- Start of LiveChat (www.livechat.com) code -->
         <script>
             window.__lc = window.__lc || {};
             window.__lc.license = 17376438;
@@ -233,13 +310,6 @@
                     <svg width="50px" height="50px" viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="0.00024000000000000003"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-2.4" y="-2.4" width="28.80" height="28.80" rx="5.472" fill="#008bc7" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.336"></g><g id="SVGRepo_iconCarrier"> <g id="style=fill"> <g id="email"> <path id="Subtract" fill-rule="evenodd" clip-rule="evenodd" d="M7 2.75C5.38503 2.75 3.92465 3.15363 2.86466 4.1379C1.79462 5.13152 1.25 6.60705 1.25 8.5V15.5C1.25 17.393 1.79462 18.8685 2.86466 19.8621C3.92465 20.8464 5.38503 21.25 7 21.25H17C18.615 21.25 20.0754 20.8464 21.1353 19.8621C22.2054 18.8685 22.75 17.393 22.75 15.5V8.5C22.75 6.60705 22.2054 5.13152 21.1353 4.1379C20.0754 3.15363 18.615 2.75 17 2.75H7ZM19.2285 8.3623C19.5562 8.10904 19.6166 7.63802 19.3633 7.31026C19.1101 6.98249 18.6391 6.9221 18.3113 7.17537L12.7642 11.4616C12.3141 11.8095 11.6858 11.8095 11.2356 11.4616L5.6886 7.17537C5.36083 6.9221 4.88982 6.98249 4.63655 7.31026C4.38328 7.63802 4.44367 8.10904 4.77144 8.3623L10.3185 12.6486C11.3089 13.4138 12.691 13.4138 13.6814 12.6486L19.2285 8.3623Z" fill="#f2f2f2"></path> </g> </g> </g></svg>
                 </a>
             </div>-->
-        </div>
-    </div>
-
-       
-    </div>
-    </div>
-
     
 
     
