--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -18,6 +18,14 @@
         td {
             text-align: center;
         }
+        th {
+            padding: 10px;
+        }
+        table {
+            background-color: #ffffff;
+            border-style: solid;
+            border-radius: 10px;
+        }
         .head {
             font-size: 30px;
         }
