--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -24,7 +24,7 @@
             background-color: #f1f1f1;
         }
         .head {
-            font-size: 25px;
+            font-size: 20px;
             text-align: center;
         }
       
@@ -222,10 +222,10 @@
         <table>
                 <tr>
                     <th style="width: 300px;" class="head">Lesson</th>
-                    <th style="width: 120px;" class="head">K</th>
-                    <th style="width: 120px;" class="head">T</th>
-                    <th style="width: 120px;" class="head">E</th>
-                    <th style="width: 120px;" class="head">W</th>
+                    <th style="width: 120px;" class="head">Knowledge</th>
+                    <th style="width: 120px;" class="head">Tracing</th>
+                    <th style="width: 120px;" class="head">Explaining</th>
+                    <th style="width: 120px;" class="head">Writing</th>
                 </tr>  
             
                 <tr>
