--- a/views/layouts/project-middle.ejs
+++ b/views/layouts/project-middle.ejs
@@ -5,7 +5,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Introduce</h1>
+                <h1>Project Quiz</h1>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
                     <li class="breadcrumb-item active" aria-current="page">Project</li>
