--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -1105,8 +1105,9 @@
                 <div class="game"></div>
                 <!--* 1 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>
-                    <iframe src="https://drive.google.com/file/d/1-QPpyl1V5C7zK5qoQlyfWGEguprDYv4e/preview" width="540" height="500" allow="autoplay"></iframe>                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <h5 style="text-align: left;">1.ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>
+                    <iframe src="https://drive.google.com/file/d/1S3Oy2QGIGgcsujrI5ImsHZw4Bx4p3pEm/preview" width="550" height="500" allow="autoplay"></iframe>                    
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
@@ -1118,8 +1119,9 @@
                 
                 <!--* 2 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า </h5>
-                    <iframe src="https://drive.google.com/file/d/1xVXalTVqFl2e0gkCffF60Lhm-Wufm7bl/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">2.ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า </h5>
+                    <iframe src="https://drive.google.com/file/d/1yImaan0d_TqkhK5qdvAJ-0M1XDHcvM_h/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
@@ -1131,8 +1133,9 @@
 
                 <!--* 3 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก </h5>
-                    <iframe src="https://drive.google.com/file/d/1LaEDhMRSPJg1OloviwErqjOcHnDbT_x0/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">3.ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก </h5>
+                    <iframe src="https://drive.google.com/file/d/1vF2maJ4g34Lv0fnlA2TJ8dRKbVl2_XZ_/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
@@ -1144,8 +1147,9 @@
 
                 <!--* 4 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI) </h5>
-                    <iframe src="https://drive.google.com/file/d/1a1BSeViYP9CbpebOB9Bn81tFrE4RlnWP/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">4.ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI) </h5>
+                    <iframe src="https://drive.google.com/file/d/1Hqaqmfiz3F0DlsN_ohc4dbOtR9vVnxF6/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
@@ -1157,8 +1161,9 @@
 
                 <!--* 5 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน </h5>
-                    <iframe src="https://drive.google.com/file/d/1uIrGz9_U_8Y8_xUcJZqECxyYRyrRPYUQ/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">5.ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน </h5>
+                    <iframe src="https://drive.google.com/file/d/1LlBEEC_tUIXbinCppQmrSDoLwT-urbKO/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
@@ -1170,8 +1175,9 @@
 
                 <!--* 6 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมแปลงเงินจากสกุลดอลลาร์เป็นบาท โดยมีอัตราแลกเปลี่ยนเป็นค่าคงที่ </h5>
-                    <iframe src="https://drive.google.com/file/d/1SCDFasiaANl3U4aUsCcwnxViR-iqDVXy/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">6.ให้เขียนโปรแกรมแปลงเงินจากสกุลดอลลาร์เป็นบาท โดยมีอัตราแลกเปลี่ยนเป็นค่าคงที่ </h5>
+                    <iframe src="https://drive.google.com/file/d/1ZWsooFRks4_kKSS88S-jFgi9hOO66aGz/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction6()">คลิกเพื่อดูเฉลย</button>
@@ -1183,8 +1189,9 @@
 
                 <!--* 7 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
-                    <iframe src="https://drive.google.com/file/d/1r-IyF2eId9YLfVOOfoNQF-OcjzoKs8Sa/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">7.ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
+                    <iframe src="https://drive.google.com/file/d/1NoXV2-nleUAVA6rE6PHM-MOhUZxxYsg6/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction7()">คลิกเพื่อดูเฉลย</button>
@@ -1196,8 +1203,9 @@
 
                 <!--* 8 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
-                    <iframe src="https://drive.google.com/file/d/1GUG2Z7362spFZPiGO8HzEFgvRa0EkHMt/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">8.ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
+                    <iframe src="https://drive.google.com/file/d/18eGGMVm7Wpu9wuHg1hdWm6HFF2RFwPsx/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction8()">คลิกเพื่อดูเฉลย</button>
@@ -1209,8 +1217,9 @@
 
                 <!--* 9 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณเงินเดินทางรถแท็กซี่ โดยใช้ค่าคงที่สำหรับอัตราค่าเริ่มต้น, อัตราค่าโดยสารต่อกิโลเมตร, และระยะทางเดินทาง กำหนดให้ค่าเริ่มต้นคือ 35 บาท, ค่าโดยสาร 5 บาทต่อกิโลเมตร, และระยะทางเดินทางเป็น 10 กิโลเมตร</h5>
-                    <iframe src="https://drive.google.com/file/d/1Hjth3jaz3vhAT2Quy7FfYOUfuveCRZqn/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">9.ให้เขียนโปรแกรมคำนวณเงินเดินทางรถแท็กซี่ โดยใช้ค่าคงที่สำหรับอัตราค่าเริ่มต้น, อัตราค่าโดยสารต่อกิโลเมตร, และระยะทางเดินทาง กำหนดให้ค่าเริ่มต้นคือ 35 บาท, ค่าโดยสาร 5 บาทต่อกิโลเมตร, และระยะทางเดินทางเป็น 10 กิโลเมตร</h5>
+                    <iframe src="https://drive.google.com/file/d/1AbLLlCo2VurSwSF-K5VvspaDu0wZptNj/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction9()">คลิกเพื่อดูเฉลย</button>
@@ -1222,8 +1231,9 @@
 
                 <!--* 10 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณปริมาณออกซิเจนที่จำเป็นสำหรับการเผาผลาญพลังงานในการออกกำลังกาย</h5>
-                    <iframe src="https://drive.google.com/file/d/1ZeltrcU8kYqA9B_veOMQhAM2nCl_WuYF/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <h5 style="text-align: left;">10.ให้เขียนโปรแกรมคำนวณปริมาณออกซิเจนที่จำเป็นสำหรับการเผาผลาญพลังงานในการออกกำลังกาย</h5>
+                    <iframe src="https://drive.google.com/file/d/1yueqQM2bXW5MCe9hM5leSrwAnY9LSJAy/preview" width="550" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction10()">คลิกเพื่อดูเฉลย</button>
