--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -37,7 +37,7 @@
   </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav mb-0 h5 ms-auto">
-          <!--<li class="nav-item "><a class="nav-link" href="/" style="color: #ffffff;">Home</a></li>-->
+          <li class="nav-item "><a class="nav-link" href="/" style="color: #ffffff;">Home</a></li>
 
           <% if (user) { %>
             
@@ -49,8 +49,8 @@
               <li class="nav-item "><a class="nav-link" href="/check" style="color: #ffffff;">Exam-Check </a></li>
             <% } %>
             <% if (user.role === 'Student') { %>
-              <li class="nav-item "><a class="nav-link" href="/" style="color: #ffffff; font-weight: lighter;"><%= person.name%></a></li>
-              <!--<li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Project</a></li>-->
+              <li class="nav-item "><a class="nav-link" href="/course" style="color: #ffffff;">Course</a></li>
+              <li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Project</a></li>
             <% } %>
             <li class="nav-item "><a class="nav-link"  href="/auth/logout" style="color: #ffffff;"><i class="fa fa-power-off" style="font-size: 25px;;align-items: center; " ></i></a></li>
             <% } else { %>
