--- a/views/student/project/3_ProjectQUIZ3.ejs
+++ b/views/student/project/3_ProjectQUIZ3.ejs
@@ -16,6 +16,21 @@
             user-select: none;
         }
 
+        .group2 {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            padding: 10px;
+        }
+        a.DrawIo {
+            color: black;
+            text-decoration: none;
+            background-color: #d27700;
+            padding-top: 15px;
+            height: 60px;
+            width: 600px;
+            text-align: center;
+        }
+ 
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
                 font-size: 3.5rem;
@@ -26,7 +41,7 @@
     <link rel='stylesheet' href='stylesheets/home.css' />
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <title>Roshambo</title>
+    <title>Project QUIZ #3</title>
 </head>
 
 <body>
@@ -36,32 +51,54 @@
 
 <br><br><br>
     <div id = "content" class="container">
-<form action="/project-Roshambo/submit" method="post" autocomplete="off" > 
+<form action="/project-Project_QUIZ3/submit" method="post" autocomplete="off" > 
        <%# LV4 %>                
-       <h2><u>Roshambo</u> <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-        ทดสอบโค้ด
-    </button></h2> 
+       <h2>Project QUIZ #3</h2> 
+       <p>ให้ซื่อสัตย์ในการทำข้อสอบ
+        Project QUIZ #3 ในวิชา CE213 2/2566 <br>
+        เอกสารประกอบการเรียน <a href="https://bit.ly/ce2132024" target="_blank">https://bit.ly/ce2132024</a>  <br>
+        อนุญาตให้เปิดเอกสาร Lectures และ Assignments ประกอบการเรียนได้เท่านั้น <br>
+        ไม่อนุญาตให้ค้นหาข้อมูลทาง Internet
+    </p>
 
     
-    <p type="text"  class="list-group-item list-group-item-action bg-dark" style="color: white;">
-        <iframe src="<%= ADRI  %> " width="100%" height="480" allow="autoplay"></iframe>
-    </p>
-    <br>
+    <div class="group2" style="background-color: #212121;">
+        <iframe src="<%= ADRI  %> " width="600px" height="800" allow="autoplay"></iframe>
+        <div>
+            <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Click to go to Draw.io</a>
 
-    <div class="form-group" >
-        <h3>CODE</h3>
-        <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-        <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" required></textarea>
-    </div>
-    <h3>ผลลัพธ์ที่ได้</h3>
-    <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult" required></textarea>
+            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="600px" height="740px"></iframe> 
+        </div>
+        
+    </div>  
 
-    <h3>การประยุกต์</h3>
-        <p>ผลลัพธ์ที่คาด</p>
-        <textarea class="form-control" style="height: 100px;" rows="4" name="ImproveResult" cols="50"></textarea>
-        <p>ตัวแปรที่เปลี่ยน</p>
-        <textarea class="form-control" style="height: 150px;" rows="4" name="Improvevariable" cols="50"></textarea>
     <br>
+    <div class="form-group">
+        <h3>Approach</h3>
+        <p>Flowchart ใช้ draw.io ในการวาด (3 คะแนน)</p>
+        <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="sendLink16" required></textarea>
+    </div><br>
+
+    <div class="form-group">
+        <h3>Deployment</h3>
+        <p>Source Code ภาษาซีที่เขียนขึ้น (5 คะแนน)</p>
+        <textarea  class="form-control"  name="code" rows="20" required></textarea>
+    </div><br>
+
+    <div class="form-group">
+        <h3>Result</h3>
+        <p>แสดงผลลัพธ์ของโปรแกรม (1 คะแนน)</p>
+        <textarea class="form-control" style="height: 100px;" rows="4" name="expResult16" cols="50"></textarea>
+    </div><br>
+    
+    <div class="form-group">
+        <h3>Improvement</h3>
+        <p>ตอบคำถาม (1 คะแนน)</p>
+        <p>ถ้าต้องการให้แสดงรายการสินค้าเฉพาะที่มีจำนวนสินค้ามากกว่า 20 ชิ้น ต้องเขียนคำสั่งอย่างไร เขียนให้เข้าใจพอสังเขป</p>
+        <textarea class="form-control" style="height: 150px;" rows="4" name="expResult17" cols="50"></textarea>
+    </div><br>
+
+    
     Language : <select name="lang"><option value="C">C</option></select>
     <div class="d-grid gap-2">
         <br>
