--- a/views/student/project/project_main.ejs
+++ b/views/student/project/project_main.ejs
@@ -50,8 +50,10 @@
 
         <div id="content" class="container"> 
             <h3>Project</h3>
-            <!--<b>Project Quiz 1: &ensp;</b><a class="a" href="/project-Ticket_Booking_System">Ticket Booking System</a><br>
-            <b>Project Quiz 2: &ensp;</b><a class="a" href="/project-Point_of_Sales_System">Point of Sales System</a>-->
+            <!--
+            <b>Project Quiz 1: &ensp;</b><a class="a" href="/project-Ticket_Booking_System">Ticket Booking System</a><br>
+            <b>Project Quiz 2: &ensp;</b><a class="a" href="/project-Point_of_Sales_System">Point of Sales System</a><br>-->
+            <b>Project Quiz 3: &ensp;</b><!--<a class="a" href="/project-Project_QUIZ3">Project_QUIZ3</a>-->
         </div>
 
 
