project quiz3 out

--- a/views/student/project/project_main.ejs
+++ b/views/student/project/project_main.ejs
@@ -53,7 +53,7 @@
             <!--
             <b>Project Quiz 1: &ensp;</b><a class="a" href="/project-Ticket_Booking_System">Ticket Booking System</a><br>
             <b>Project Quiz 2: &ensp;</b><a class="a" href="/project-Point_of_Sales_System">Point of Sales System</a><br>-->
-            <b>Project Quiz 3: &ensp;</b><!--<a class="a" href="/project-Project_QUIZ3">Project_QUIZ3</a>-->
+            <b>Project Quiz 3: &ensp;</b><a class="a" href="/project-Project_QUIZ3">Project_QUIZ3</a>
         </div>
 
 
